--- a/tools/nvspPhonemeEditorWin32/resources.rc
+++ b/tools/nvspPhonemeEditorWin32/resources.rc
@@ -14,6 +14,7 @@ BEGIN
   POPUP "&Settings"
   BEGIN
     MENUITEM "Set eSpeak directory...", IDM_SETTINGS_ESPEAK_DIR
+    MENUITEM "Phonemizer settings...", IDM_SETTINGS_PHONEMIZER
     MENUITEM "Set DLL directory...", IDM_SETTINGS_DLL_DIR
     MENUITEM "Speech settings...", IDM_SETTINGS_SPEECH_SETTINGS
   END
@@ -160,4 +161,37 @@ BEGIN
 
   DEFPUSHBUTTON "OK", IDOK, 126,78,50,14
   PUSHBUTTON "Cancel", IDCANCEL, 180,78,50,14
+END
+
+
+IDD_PHONEMIZER_SETTINGS DIALOGEX 0,0,360,240
+STYLE DS_SETFONT | DS_MODALFRAME | WS_POPUP | WS_CAPTION | WS_SYSMENU
+CAPTION "Phonemizer settings"
+FONT 9, "Segoe UI"
+BEGIN
+  LTEXT "Template:", -1, 7,7,45,10
+  COMBOBOX IDC_PHONEMIZER_TEMPLATE, 60,5,293,120, CBS_DROPDOWNLIST | WS_VSCROLL | WS_TABSTOP
+
+  GROUPBOX "Executable", -1, 7,24,346,52
+  LTEXT "Phonemizer exe:", -1, 14,38,75,10
+  EDITTEXT IDC_PHONEMIZER_EXE, 95,36,200,14, ES_AUTOHSCROLL | WS_TABSTOP
+  PUSHBUTTON "Browse...", IDC_PHONEMIZER_BROWSE, 300,35,50,14
+  LTEXT "Leave blank to use eSpeak from the configured directory.", -1, 14,54,330,10
+
+  GROUPBOX "Invocation", -1, 7,80,346,92
+  LTEXT "Command type:", -1, 14,94,70,10
+  COMBOBOX IDC_PHONEMIZER_MODE, 95,92,170,80, CBS_DROPDOWNLIST | WS_VSCROLL | WS_TABSTOP
+  LTEXT "Args for STDIN:", -1, 14,112,75,10
+  EDITTEXT IDC_PHONEMIZER_ARGS_STDIN, 95,110,255,14, ES_AUTOHSCROLL | WS_TABSTOP
+  LTEXT "Args for CLI:", -1, 14,130,75,10
+  EDITTEXT IDC_PHONEMIZER_ARGS_CLI, 95,128,255,14, ES_AUTOHSCROLL | WS_TABSTOP
+  LTEXT "Placeholders: {lang} {qlang} {text} {qtext} {dataDir} {pathArg}", -1, 14,148,330,20
+
+  GROUPBOX "Chunking", -1, 7,176,346,34
+  LTEXT "Max chunk chars:", -1, 14,190,75,10
+  EDITTEXT IDC_PHONEMIZER_MAXCHUNK, 95,188,60,14, ES_NUMBER | WS_TABSTOP
+  LTEXT "Smaller = more responsive; larger = fewer calls.", -1, 160,190,190,10
+
+  DEFPUSHBUTTON "OK", IDOK, 246,219,50,14
+  PUSHBUTTON "Cancel", IDCANCEL, 303,219,50,14
 END
