--- a/tools/nvspPhonemeEditorWin32/CMakeLists.txt
+++ b/tools/nvspPhonemeEditorWin32/CMakeLists.txt
@@ -15,6 +15,8 @@ add_executable(nvspPhonemeEditor WIN32
   phonemizer_cli.h
   Dialogs.cpp
   Dialogs.h
+  VoiceProfileEditor.cpp
+  VoiceProfileEditor.h
   WinUtils.cpp
   WinUtils.h
   AccessibilityUtils.cpp
