--- a/tools/nvspPhonemeEditorWin32/resources.rc
+++ b/tools/nvspPhonemeEditorWin32/resources.rc
@@ -21,6 +21,8 @@ BEGIN
     MENUITEM "Phonemizer settings...", IDM_SETTINGS_PHONEMIZER
     MENUITEM "Set DLL directory...", IDM_SETTINGS_DLL_DIR
     MENUITEM "Speech settings...", IDM_SETTINGS_SPEECH_SETTINGS
+    MENUITEM SEPARATOR
+    MENUITEM "Edit voice profiles...", IDM_SETTINGS_EDIT_VOICES
   END
   POPUP "&Help"
   BEGIN
@@ -208,4 +210,84 @@ BEGIN
   "P", IDM_FILE_SAVE_PHONEMES, VIRTKEY, CONTROL
   VK_F5, IDM_FILE_RELOAD_LANGUAGE, VIRTKEY
   VK_F5, IDM_FILE_RELOAD_PHONEMES, VIRTKEY, SHIFT
+END
+
+// -----------------
+// Dialog: Voice Profiles List
+// -----------------
+IDD_VOICE_PROFILES DIALOGEX 0,0,280,200
+STYLE DS_SETFONT | DS_MODALFRAME | WS_POPUP | WS_CAPTION | WS_SYSMENU
+CAPTION "Voice Profiles"
+FONT 9, "Segoe UI"
+BEGIN
+  LTEXT "Voice profiles defined in phonemes.yaml:", -1, 7,7,266,10
+  LISTBOX IDC_VP_LIST, 7,20,200,150, LBS_NOTIFY | WS_VSCROLL | WS_TABSTOP | WS_BORDER
+  PUSHBUTTON "Add...", IDC_VP_ADD, 215,20,58,14
+  PUSHBUTTON "Edit...", IDC_VP_EDIT, 215,38,58,14
+  PUSHBUTTON "Duplicate", IDC_VP_DUPLICATE, 215,56,58,14
+  PUSHBUTTON "Delete", IDC_VP_DELETE, 215,74,58,14
+  DEFPUSHBUTTON "Save && Close", IDOK, 150,178,70,14
+  PUSHBUTTON "Cancel", IDCANCEL, 223,178,50,14
+END
+
+// -----------------
+// Dialog: Edit Voice Profile
+// -----------------
+IDD_EDIT_VOICE_PROFILE DIALOGEX 0,0,400,340
+STYLE DS_SETFONT | DS_MODALFRAME | WS_POPUP | WS_CAPTION | WS_SYSMENU
+CAPTION "Edit Voice Profile"
+FONT 9, "Segoe UI"
+BEGIN
+  LTEXT "Profile name:", -1, 7,7,60,10
+  EDITTEXT IDC_EVP_NAME, 75,5,140,14, ES_AUTOHSCROLL
+
+  GROUPBOX "Class Scales (multipliers)", -1, 7,26,386,150
+  LTEXT "Class:", -1, 14,40,30,10
+  COMBOBOX IDC_EVP_CLASS_COMBO, 50,38,100,120, CBS_DROPDOWNLIST | WS_VSCROLL | WS_TABSTOP
+  PUSHBUTTON "Remove Class", IDC_EVP_CLASS_REMOVE, 156,37,70,14
+  
+  LTEXT "Scale fields:", -1, 14,56,60,10
+  LISTBOX IDC_EVP_SCALES_LIST, 14,68,180,100, LBS_NOTIFY | WS_VSCROLL | WS_TABSTOP | WS_BORDER
+  
+  LTEXT "Field:", -1, 204,56,30,10
+  COMBOBOX IDC_EVP_SCALE_FIELD, 204,68,100,120, CBS_DROPDOWNLIST | WS_VSCROLL | WS_TABSTOP
+  LTEXT "Value:", -1, 204,88,30,10
+  EDITTEXT IDC_EVP_SCALE_VALUE, 204,100,100,14, ES_AUTOHSCROLL
+  LTEXT "(arrays: [1.0, 1.1, 1.2, ...])", -1, 204,118,100,20
+  PUSHBUTTON "Set", IDC_EVP_SCALE_SET, 310,68,75,14
+  PUSHBUTTON "Remove Selected", IDC_EVP_SCALE_REMOVE, 310,88,75,14
+
+  GROUPBOX "Phoneme Overrides (absolute values)", -1, 7,180,386,120
+  LISTBOX IDC_EVP_OVERRIDES_LIST, 14,194,270,96, LBS_NOTIFY | WS_VSCROLL | WS_TABSTOP | WS_BORDER
+  PUSHBUTTON "Add...", IDC_EVP_OVERRIDE_ADD, 292,194,95,14
+  PUSHBUTTON "Edit...", IDC_EVP_OVERRIDE_EDIT, 292,212,95,14
+  PUSHBUTTON "Remove", IDC_EVP_OVERRIDE_REMOVE, 292,230,95,14
+
+  DEFPUSHBUTTON "OK", IDOK, 288,318,50,14
+  PUSHBUTTON "Cancel", IDCANCEL, 343,318,50,14
+END
+
+// -----------------
+// Dialog: Edit Phoneme Override
+// -----------------
+IDD_EDIT_PHONEME_OVERRIDE DIALOGEX 0,0,280,200
+STYLE DS_SETFONT | DS_MODALFRAME | WS_POPUP | WS_CAPTION | WS_SYSMENU
+CAPTION "Edit Phoneme Override"
+FONT 9, "Segoe UI"
+BEGIN
+  LTEXT "Phoneme (IPA symbol):", -1, 7,7,90,10
+  EDITTEXT IDC_EPO_PHONEME, 100,5,80,14, ES_AUTOHSCROLL
+
+  LTEXT "Field overrides:", -1, 7,26,100,10
+  LISTBOX IDC_EPO_FIELDS_LIST, 7,38,160,120, LBS_NOTIFY | WS_VSCROLL | WS_TABSTOP | WS_BORDER
+  
+  LTEXT "Field:", -1, 175,26,30,10
+  COMBOBOX IDC_EPO_FIELD_COMBO, 175,38,98,200, CBS_DROPDOWNLIST | WS_VSCROLL | WS_TABSTOP
+  LTEXT "Value:", -1, 175,58,30,10
+  EDITTEXT IDC_EPO_FIELD_VALUE, 175,70,98,14, ES_AUTOHSCROLL
+  PUSHBUTTON "Set", IDC_EPO_FIELD_SET, 175,90,45,14
+  PUSHBUTTON "Remove", IDC_EPO_FIELD_REMOVE, 225,90,48,14
+
+  DEFPUSHBUTTON "OK", IDOK, 168,178,50,14
+  PUSHBUTTON "Cancel", IDCANCEL, 223,178,50,14
 END
